syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/registration";

message CreateTeamRequest {
  string team_name = 1;
  string name = 2; // contestant name
  string email_address = 3;
  bool is_student = 4;
  bool hidden = 16; // requires bypass token
}

message CreateTeamResponse { int64 team_id = 1; }
